# e-commerce-project

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  catalog微服务架构设计.docx  tsconfig.base.json  对电商制作的一个流程.docx
.github/workflows/: analytics-ci.yml  ci.yml  docker-images.yml  ghcr-cleanup.yml  release.yml
apps/android-app/: README.md
apps/ios-app/: README.md  project.yml
apps/merchant/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/storefront/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
docs/: PROCESS.md  alerting-cloudwatch.md  authentication.md  backend-audit.md  backend-production-guide.md  database-backup.md  database.md  debugging.md  deployment-ec2.md  frontend-architecture.md  frontend-production.md  java-backend-migration.md  kubernetes.md  mobile-apps.md  monitoring.md  notification.md  observability.md  openai-codex-oss-application.md  operations-runbook.md  performance.md  platform-services.md  production-roadmap.md  registry.md  release-delivery.md  security-best-practices.md  service-communication.md  testing.md
frontend/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  tsconfig.jest.json  vite.config.ts
frontend/src/: App.tsx  auth.ts  index.css  main.tsx  theme.ts
k8s/: kong-deployment.yaml  network-policy.yaml  postgres-statefulset.yaml  service-deployment.yaml
scripts/: backup-restore-drill.sh  create-cloudwatch-alarms.sh  db-init-run.sh  deploy-ec2.ps1  deploy-ecs.ps1  generate-ecs-compose.py  loadtest.sh  mobile-smoke.ps1  provision-db-roles.sh  release-acceptance.sh  render-kong-config.py  slo-check.sh  smoke-checks.sh  validate-production-env.sh
services/: .env  .env.example  .env.production.example  docker-compose.aws.logging.yml  docker-compose.aws.yml  docker-compose.ecs.yml  docker-compose.tests.yml  docker-compose.yml  global.json  prometheus.rules.yml  prometheus.yml  prometheusRule.yaml
services/Address/: README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/Admin/: Dockerfile  Minimum.md  README.md  conftest.py  debug-admin.sh  pyproject.toml
services/Admin/app/: main.py
services/Admin/tests/: test_admin.py
services/Analytics/: .dockerignore  .env  Dockerfile  Minimum.md  README.md  conftest.py  docker-compose.yml  openapi.yaml  pyproject.toml  run.py
services/Analytics/app/: db.py  main.py  models.py  scheduler.py
services/Analytics/datawarehouse/tests/: test_datawarehouse_api.py
services/Analytics/forecasting/: pyproject.toml
services/Analytics/forecasting/tests/: test_forecasting_api.py
services/Analytics/tests/: test_api.py
services/Asset/: Dockerfile  README.md  pyproject.toml
services/Attribute/: README.md
services/Auth/: Auth.csproj  Auth.sln  Dockerfile  Minimum.md  Program.cs  README.md  appsettings.json  docker-compose.yml  openapi.yaml
services/Bff/: .env.example  Dockerfile  pyproject.toml
services/Bff/app/: main.py  main.py+.tmpview
services/Bff/tests/: test_sessions.py
services/Cart/: Cart.csproj  Dockerfile  Minimum.md  Program.cs  debug-cart.sh  docker-compose.yml  global.json  openapi.yaml
services/Catalog/: Catalog.csproj  Catalog.http  Catalog.sln  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json  docker-compose.yml  global.json  openapi.yaml
services/CatalogJava/: Dockerfile  README.md  pom.xml
services/Cms/: README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/Consent/: Dockerfile  README.md  pyproject.toml
services/Currency/: README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/Currency/app/: main.py
services/Currency/tests/: test_currency.py
services/DataWarehouse/: README.md  docker-compose.yml  pyproject.toml
services/Experiment/: README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/Forecasting/: README.md  docker-compose.yml
services/FraudDetection/: pyproject.toml
services/Gateway/: Dockerfile  README.md  docker-compose.yml  kong.yml  nginx.conf  render-kong-config.sh
services/Inventory/: Dockerfile  Minimum.md  README.md  debug-inventory.sh  docker-compose.yml  openapi.yaml  pyproject.toml
services/Inventory/app/: db.py  main.py  models.py
services/Inventory/tests/: test_inventory.py
services/Moderation/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/Notification/: Dockerfile  Minimum.md  README.md  debug-notification.sh  docker-compose.yml  openapi.yaml  pyproject.toml
services/Notification/app/: main.py
services/Notification/tests/: test_api.py
services/Order/: Dockerfile  Minimum.md  Order.csproj  Order.sln  Program.cs  README.md  appsettings.Development.json  appsettings.json  debug-order.sh  docker-compose.yml  (+1 more)
services/Performance/: pyproject.toml
services/Performance/app/: main.py
services/Review/: README.md  debug-review.sh  docker-compose.yml  openapi.yaml  pyproject.toml
services/Review/app/: main.py
services/Review/tests/: test_api.py
services/Search/: Dockerfile  README.md  pyproject.toml
services/Search/app/: main.py
services/Search/attribute/: pyproject.toml
services/Search/facet/: Dockerfile  README.md  pyproject.toml
services/Search/recommendation/: Dockerfile  docker-compose.yml
services/Tenant/: openapi.yaml  pyproject.toml
services/Tenant/app/: config.py  db.py  main.py  schemas.py
services/Tenant/tests/: test_tenant.py
(+432 files in other folders)
