[tool.poetry]
name = "analytics"
version = "0.1.0"
description = "Analytics service for the e-commerce platform"
authors = ["Example <example@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pandas = "^2.2.2"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
apscheduler = "^3.10"
prometheus-client = "^0.20"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.27"
aiosqlite = "^0.20"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
