[tool.poetry]
name = "currency"
version = "0.1.0"
description = "Multi-currency and internationalisation"
authors = ["E-Commerce Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = "^0.29"
prometheus-client = "^0.20"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
