[tool.poetry]
name = "inventory"
version = "0.1.0"
description = "Inventory Service"
authors = ["E-Commerce Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
prometheus-client = "^0.20.0"
httpx = "^0.27.2"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
