[tool.poetry]
name = "notification"
version = "0.1.0"
description = "Notification service for emails"
authors = ["Example <example@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = "^0.29"
aiosmtplib = "^2.0"
prometheus-client = "^0.20"
python-dotenv = "*"
email-validator = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
